@@ -227,11 +227,12 @@ m4_define([_OVS_VSWITCHD_START],
 /netdev_offload|INFO|netdev: Flow API Enabled/d
 /probe tc:/d
 /setting extended ack support failed/d
-/tc: Using policy/d']])
+/tc: Using policy/d
+/hw-offload-priority configuration has an unknown type;/d']])
 ])
 
 # OVS_VSWITCHD_START([vsctl-args], [vsctl-output], [=override],
-#                    [vswitchd-aux-args])
+#                    [vswitchd-aux-args] [dbinit-aux-args])
 #
 # Creates a database and starts ovsdb-server, starts ovs-vswitchd
 # connected to that database, calls ovs-vsctl to create a bridge named
@@ -248,7 +249,9 @@ m4_define([_OVS_VSWITCHD_START],
 # 'vswitchd-aux-args' provides a way to pass extra command line arguments
 # to ovs-vswitchd
 m4_define([OVS_VSWITCHD_START],
-  [_OVS_VSWITCHD_START([--enable-dummy$3 --disable-system --disable-system-route $4])
+  [_OVS_VSWITCHD_START(
+      [--enable-dummy$3 --disable-system --disable-system-route $4],
+      [$5])
    AT_CHECK([add_of_br 0 $1 m4_if([$2], [], [], [| uuidfilt])], [0], [$2])
 ])
 
