@@ -19,6 +19,10 @@ Post-v3.6.0
        using routing rules for selecting next hops after encapsulation.
    - DPDK:
      * Add support for DPDK 25.11.
+   - Flow HW Offload:
+     * New global configuration option 'other-config:hw-offload-priority'
+       that allows to set the order of the hardware offload providers
+       to try when multiple exist for a given datapath implementation.
    - OVSDB-IDL:
      * New ovsdb_idl_txn_assert_read_only() interface to mark transactions
        as read-only and trigger assertion failure when application attempts
